added AuthController doc
